header section style and responsive all ok

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
       </div>
     </nav>
     <!-- nav End  -->
+
+    <section class="bannerSec flex">
+      <div class="bannerText">
+        <h1> <span class="orange-col">Empowering </span>
+          <br>
+          students from small <br>
+          age<span class="skyblue-col"> towards vision</span></h1>
+        <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a Diverse and Dynamic World.</p>
+        <button class="praimaryBTN">Enroll Now</button>
+      </div>
+      <div class="bannerImg">
+        <img src="./assets/hero-kids.png" alt="">
+      </div>
+    </section>
   </header>
 
   <main>
