curriculum style and responsive all ok

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -49,6 +52,45 @@
   </header>
 
   <main>
+
+    <!-- curriculum start  -->
+    <section class="curriculum">
+      <h2>Standard Curriculum</h2>
+      <div class="curriCards">
+        <div class="curriCard kinderCard flex">
+          <img src="./assets/kinder.png" alt="kinder image">
+          <h5>Kinder (3-6) Years</h5>
+          <p class="raleway-font">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+            <a href="#">Read More</a>
+        </div>
+
+        <div class="curriCard elementaryCard flex">
+          <img src="./assets/elementary.png" alt="elementary image">
+          <h5>Elementary School</h5>
+          <p class="raleway-font">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+            <a href="#">Read More</a>
+        </div>
+
+        <div class="curriCard middleCard flex">
+          <img src="./assets/middle.png" alt="middle image">
+          <h5>Middle (10-16) Years</h5>
+          <p class="raleway-font">Cum sociis natoque penatibus et magnis
+            dis parturient montes, nascetur ridiculus
+            mu sdis parturient</p>
+            <a href="#">Read More</a>
+        </div>
+      </div>
+      <div class="aroIcone">
+        <i class="fa-solid fa-arrow-left"></i>
+        <i class="fa-solid fa-arrow-right"></i>
+      </div>
+    </section>
+    <!-- curriculum end  -->
+
   </main>
 
   <footer>
