--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <main>
 
-    <!-- curriculum start  -->
+<!-- curriculum start  -->
     <section class="curriculum">
       <h2>Standard Curriculum</h2>
       <div class="curriCards">
@@ -89,8 +89,78 @@
         <i class="fa-solid fa-arrow-right"></i>
       </div>
     </section>
-    <!-- curriculum end  -->
+<!-- curriculum end  -->
 
+<!-- Our Stories start  -->
+  <div class="storiesWith">
+  <section class="storiesSect">
+    <h2>Our Stories</h2>
+    <div class="storieCards flex">
+      <div class="storieCard1">
+        <div class="storieImg">
+          <img src="./assets/story-1.png" alt="">
+          <p class="date greenCol1 raleway-font">November 19, 2019</p>
+        </div>
+        <div class="storieText">
+          <h5>A fun toddler coloring training on <br>
+            classroom</h5>
+            <p class="raleway-font">Beautiful branding for changes by Never Now in Australia.
+              changes is a platform for open discussion in an inclusive and
+              collaborative environment, providing the...</p>
+            </div>
+          </div>
+          <div class="maltipulCard">
+            <div class="storieCard2">
+              <div class="storieImg">
+      <img src="./assets/story-2.png" alt="">
+      <p class="date greenCol2 raleway-font ">November 19, 2019</p>
+    </div>
+    <div class="storieText">
+    <h5>Find out if a school fits the
+      family’s needs</h5>
+  </div>
+</div>
+  <div class="storieCard2">
+    <div class="storieImg">
+      <img src="./assets/story-3.png" alt="">
+      <p class="date greenCol3 raleway-font ">November 19, 2019</p>
+    </div>
+    <div class="storieText">
+      <h5>Find out if a school fits the
+        family’s needs</h5>
+      </div>
+    </div>
+    <div class="storieCard2">
+      <div class="storieImg">
+        <img src="./assets/story-4.png" alt="">
+        <p class="date greenCol4 raleway-font ">November 19, 2019</p>
+      </div>
+      <div class="storieText">
+        <h5>Find out if a school fits the
+          family’s needs</h5>
+        </div>
+      </div>
+  <div class="storieCard2">
+    <div class="storieImg">
+      <img src="./assets/story-5.png" alt="">
+      <p class="date greenCol5 raleway-font ">November 19, 2019</p>
+    </div>
+  <div class="storieText">
+    <h5>Find out if a school fits the
+      family’s needs</h5>
+    </div>
+  </div>
+</div>
+</div>
+<div class="storieBTN flex">
+  <button class="praimaryBTN">View All</button>
+</div>
+
+</section>
+</div>
+  
+<!-- Our Stories start  -->
+    
   </main>
 
   <footer>
