--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="quicksand-font">
+  
   <header>
+
     <!-- nav start  -->
     <nav class="flex">
       <div class="logo flex">
@@ -160,7 +162,9 @@
 </div>
   
 <!-- Our Stories start  -->
-    
+<marquee width="100%" direction="left">
+  DISCOUNT OFFERS ON ADMISSION FEES (Cambridge Curriculum Session 2024-25)
+  </marquee>
   </main>
 
   <footer>
