--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
 </div>
   
 <!-- Our Stories start  -->
-<marquee width="100%" direction="left">
-  DISCOUNT OFFERS ON ADMISSION FEES (Cambridge Curriculum Session 2024-25)
-  </marquee>
-  </main>
 
+  </main>
+  <marquee  class="marquee" >
+    DISCOUNT OFFERS ON ADMISSION FEES (Cambridge Curriculum Session 2024-25)!
+    </marquee>
   <footer>
     <!-- footer start  -->
   <div class="footerItmes flex">
