ok find some isue

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 <!-- Our Stories start  -->
 
   </main>
-  <marquee  class="marquee" >
+  <marquee  class="mar" direction="left">
     DISCOUNT OFFERS ON ADMISSION FEES (Cambridge Curriculum Session 2024-25)!
     </marquee>
   <footer>
