--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body class="quicksand-font">
-  
-  <header>
 
+  <header>
+<marquee  class="mar" direction="left">
+    DISCOUNT OFFERS ON ADMISSION FEES (Cambridge Curriculum Session 2024-25)!
+    </marquee>
     <!-- nav start  -->
     <nav class="flex">
       <div class="logo flex">
@@ -164,11 +166,40 @@
 <!-- Our Stories start  -->
 
   </main>
-  <marquee  class="mar" direction="left">
-    DISCOUNT OFFERS ON ADMISSION FEES (Cambridge Curriculum Session 2024-25)!
-    </marquee>
   <footer>
+<!-- footer start  -->
+<div class="footerItmes flex">
+  <div class="footerItme">
+    <div class="fotterImg flex">
+      <img src="./assets/Footerlogo.png" alt="">
+      <h2>Kids <br>
+        Education</h2>
+    </div>
+    <div class="fotterText">
+      <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+    </div>
+  </div>
 
+  
+  <div class="footerItme">
+    <h4>About School</h4>
+    <ul class="">
+      <li><a href="" class="fotterA">Home</a></li>
+      <li><a href=""class="fotterA">About</a></li>
+      <li><a href=""class="fotterA">Facilities</a></li>
+      <li><a href=""class="fotterA">Admission</a></li>
+    </ul>
+  </div>
+  <div class="footerItme">
+    <h4>Keep In Touch</h4>
+    <div class="fotterIcones">
+      <img src="./assets/fb.png" alt="Social Icone">
+      <img src="./assets/dribble.png" alt="Social Icone">
+      <img src="./assets/twitter.png" alt="Social Icone">
+      <img src="./assets/google+.png" alt="Social Icone">
+    </div>
+  </div>
+</div>
   </footer>
 </body>
 </html>
