--- a/index.html
+++ b/index.html
@@ -176,12 +176,12 @@
         Education</h2>
     </div>
     <div class="fotterText">
-      <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie. Mayo rib sauce Hawaiian meatball.</p>
+      <p>We strive to lay the foundation for a lifetime of success by focusing on the holistic development of every child. Through innovative teaching methods, a supportive atmosphere, and engaging activities, we help young learners discover their potential</p>
     </div>
   </div>
 
   
-  <div class="footerItme">
+  <div class="footerItme aboutSchool">
     <h4>About School</h4>
     <ul class="">
       <li><a href="" class="fotterA">Home</a></li>
